Introduce a mergeStrategy extension point.
The new extension point can be used to implement and register custom
merge strategies which can be used by EGit operations that require merge
(merge, rebase, pull, revert, squash, stash, submodule update).

Add a preference page to allow selection of the preferred merge
strategy.

Make sure that relevant operations use the preferred strategy.

Bug: 418151
Change-Id: I4d455ce171cca13c780e72b8d27dd929b28c6b71
Signed-off-by: Laurent Delaigue <laurent.delaigue@obeo.fr>
Signed-off-by: Matthias Sohn <matthias.sohn@sap.com>

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -242,6 +242,9 @@ GitPreferenceRoot_RepoChangeScannerGroupHeader=Automatic refresh
 GitPreferenceRoot_SecureStoreGroupLabel=Secure Store
 GitPreferenceRoot_SecureStoreUseByDefault=Store credentials in secure store by default
 GitPreferenceRoot_useLogicalModel=Allow models (e.g., Java, EMF) to participate in synchronizations
+GitPreferenceRoot_preferreMergeStrategy_label=You can select a specific merge strategy below\nto override the default JGit merge behavior for merge operations\n(merge, rebase, pull, revert, squash, stash, submodule update)
+GitPreferenceRoot_preferreMergeStrategy_group=Preferred merge strategy for operations that require merges
+GitPreferenceRoot_defaultMergeStrategyLabel=Default Strategy (as defined by JGit)
 GitProjectPropertyPage_LabelBranch=Branch:
 GitProjectPropertyPage_LabelGitDir=Git directory:
 GitProjectPropertyPage_LabelId=HEAD:
