--- a/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
+++ b/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
@@ -34,6 +34,7 @@ HotfixFinishHandler_hotfixFinishConflicts=Finishing hotfix resulted in conflicts
 HotfixStartHandler_pleaseProvideANameForTheNewHotfix=Please provide a name for the new hotfix.
 HotfixStartHandler_provideHotfixName=Provide hotfix name
 HotfixStartHandler_startingNewHotfix=Starting new Hotfix...
+InitDialog_branchDoesNotExistYetAndWillBeCreated=Branch ''{0}''does not yet exist, and will have to be created.
 InitDialog_chooseBranchNamesAndPrefixes=Choose branch names and prefixes for your Gitflow repository.
 InitDialog_developBranch=Develop branch
 InitDialog_featureBranchPrefix=Feature branch prefix
@@ -42,7 +43,9 @@ InitDialog_initializeRepository=Initialize repository
 InitDialog_invalidBranchName=Invalid branch name: ''{0}''
 InitDialog_invalidPrefix=Invalid prefix: ''{0}''
 InitDialog_masterBranch=Master branch
+InitDialog_masterBranchIsMissing=Master branch missing
 InitDialog_releaseBranchPrefix=Release branch prefix
+InitDialog_selectedMasterBranchDoesNotExistCreateNow=Selected master branch ''{0}'' does not exist. Do you want to create it now?
 InitDialog_versionTagPrefix=Version tag prefix
 InitHandler_initializing=Initializing...
 ReleaseFinishHandler_Conflicts=Conflicts
