[wip] Add dialog to choose merge strategy before merging operations
Change-Id: I7e3fa7a00f616905a2005f58fdf46998866ce26f
Signed-off-by: Laurent Delaigue <laurent.delaigue@obeo.fr>

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -246,6 +246,7 @@ GitPreferenceRoot_useLogicalModel=Allow models (e.g., Java, EMF) to participate 
 GitPreferenceRoot_preferreMergeStrategy_label=You can select a specific merge strategy below\nto override the default JGit merge behavior for merge operations\n(merge, rebase, pull, revert, squash, stash, submodule update)
 GitPreferenceRoot_preferreMergeStrategy_group=Preferred merge strategy for operations that require merges
 GitPreferenceRoot_defaultMergeStrategyLabel=Default Strategy (as defined by JGit)
+GitPreferenceRoot_hideMergeStrategyDialog=Don't display the merge strategy selection dialog and directly use the preferred strategy
 GitProjectPropertyPage_LabelBranch=Branch:
 GitProjectPropertyPage_LabelGitDir=Git directory:
 GitProjectPropertyPage_LabelId=HEAD:
@@ -1889,3 +1890,18 @@ PushMenu_PushHEAD=Push &HEAD...
 PushMenu_PushBranch=Push &Branch ''{0}''...
 
 DiffStyleRangeFormatter_diffTruncated=[...] diff truncated after {0} lines.
+
+PreferredStrategyDialog_ShellTitle=Preferred Merge Strategy
+PreferredStrategyDialog_Title=Select your preferred merge strategy
+PreferredStrategyDialog_Message=EGit allows third-parties to provide custome merge strategies that can be used instead of the default merge strategy implemented in JGit.
+PreferredStrategyDialog_Explanation=This operation involves a merge.\n\
+You can select a specific merge strategy.\n\
+You can also choose your preferred merge strategy later in the preferences, in page 'Team > Git > Synchronize'.\n\
+\n\
+If you don't know what to do, just leave the default and press OK.
+PreferredStrategyDialog_DontAskAgain=Please always use this strategy and don't ask again. (Can be changed in 'Team > Git > Synchronize' preferences)
+PreferredMergeStrategy_Ours_Label=Use our (local) branch as output of the merge
+PreferredMergeStrategy_Theirs_Label=Use their (remote) branch as output of the merge
+PreferredMergeStrategy_SimpleTwoWayInCore_Label=Merge paths but not content
+PreferredMergeStrategy_Resolve_Label=Merge paths and content, only one lerge base is supported
+PreferredMergeStrategy_Recursive_Label=Merge paths and content, multiple merge bases is supported
