--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1900,3 +1900,6 @@ PushMenu_PushHEAD=Push &HEAD...
 PushMenu_PushBranch=Push &Branch ''{0}''...
 
 DiffStyleRangeFormatter_diffTruncated=[...] diff truncated after {0} lines.
+
+StagingViewPreferencePage_title=Staging View
+StagingViewPreferencePage_maxLimitListMode=Switch to compact mode if files number exceeds:
