--- a/org.eclipse.egit.ui/plugin.properties
+++ b/org.eclipse.egit.ui/plugin.properties
@@ -115,6 +115,7 @@ GitPreferences_name=Git
 GitPreferences_WindowCachePreferencePage_name=Window Cache
 GitPreferences_DecoratorPreferencePage_name=Label Decorations
 GitPreferences_CommittingPreferencePage_name=Committing
+GitPreferences_StagingViewPreferencePage_name=Staging View
 GitPreferences_ProjectPreferencePage_name=Projects
 
 ShareProjectCommand_name=Share with Git
