Add icon to Gitflow menu contributions
Re-using icon from Bug 470626 for:
- team sub-menu
- history view menu
- repository view menu

Change-Id: I87ea38cdbfc19f71c215eab52cbdfd28ab76bf1e
Signed-off-by: Max Hohenegger <eclipse@hohenegger.eu>

--- a/org.eclipse.egit.gitflow.ui/plugin.xml
+++ b/org.eclipse.egit.gitflow.ui/plugin.xml
@@ -16,9 +16,10 @@
 		<menuContribution
             locationURI="popup:org.eclipse.egit.ui.RepositoriesView?after=group.gitflow">
 			<command
-                  commandId="org.eclipse.egit.gitflow.ui.command.init"
-                  label="%TeamGitFlowInit.name"
-                  style="push">
+         commandId="org.eclipse.egit.gitflow.ui.command.init"
+         icon="icons/obj16/git-flow_16x10.png"
+         label="%TeamGitFlowInit.name"
+         style="push">
 				<visibleWhen
                      checkEnabled="false">
 					<iterate
@@ -41,7 +42,8 @@
 		<menuContribution
             locationURI="popup:org.eclipse.egit.ui.RepositoriesView?after=group.gitflow">
 			<menu
-               label="%TeamGitFlowMenu.name">
+         icon="icons/obj16/git-flow_16x10.png"
+         label="%TeamGitFlowMenu.name">
 				<visibleWhen
                      checkEnabled="false">
 					<iterate
@@ -631,7 +633,8 @@
 		<menuContribution
             locationURI="popup:team.main?after=group11">
 			<menu
-                  label="%TeamGitFlowMenu.name">
+         icon="icons/obj16/git-flow_16x10.png"
+         label="%TeamGitFlowMenu.name">
 				<visibleWhen
                      checkEnabled="false">
 					<iterate
@@ -723,9 +726,10 @@
 		<menuContribution
             locationURI="popup:team.main?after=group11">
 			<command
-                  commandId="org.eclipse.egit.gitflow.ui.command.init"
-                  label="%TeamGitFlowInit.name"
-                  style="push">
+         commandId="org.eclipse.egit.gitflow.ui.command.init"
+         icon="icons/obj16/git-flow_16x10.png"
+         label="%TeamGitFlowInit.name"
+         style="push">
 				<visibleWhen
                      checkEnabled="false">
 					<iterate
@@ -755,6 +759,7 @@
           allPopups="false"
           locationURI="popup:org.eclipse.egit.ui.historyPageContributions?after=additions">
        <menu
+             icon="icons/obj16/git-flow_16x10.png"
              label="%TeamGitFlowMenu.name">
           <dynamic
                 class="org.eclipse.egit.gitflow.ui.internal.menu.DynamicHistoryMenu"
