Added support for keeping branch after Gitflow feature finish
- added new option to API
- added checkbox to feature finish dialog
- added tests and UI tests
- refactored feature finish UI tests to reduce redundancy

Bug: 477786
Change-Id: I4e58529378c976c83b7564e817db6f7be00d0cec
Signed-off-by: Max Hohenegger <eclipse@hohenegger.eu>

--- a/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
+++ b/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
@@ -68,6 +68,7 @@ NameValidator_invalidName='%s' is not a valid name. None of the following charac
 NameValidator_nameAlreadyExists=Name '%s' already exists
 FeatureCheckoutHandler_cleanupDialog_title=Cannot Rebase Repository ''{0}''
 FeatureCheckoutHandler_cleanupDialog_text=You have uncommitted changes. Either commit the changes, stash the changes, or discard the changes by resetting the current branch.
+FinishFeatureDialog_keepBranch=&Keep branch - do not delete branch after finishing is complete
 FinishFeatureDialog_squashCheck=&Squash - produce a single commit from the changes in this feature
 FinishFeatureDialog_title=Feature finish options
 FinishFeatureDialog_setParameterForFinishing=Set options for finishing {0}.
