--- a/org.eclipse.egit.gitflow/pom.xml
+++ b/org.eclipse.egit.gitflow/pom.xml
@@ -16,7 +16,7 @@
   <parent>
     <groupId>org.eclipse.egit</groupId>
     <artifactId>egit-parent</artifactId>
-    <version>4.0.3-SNAPSHOT</version>
+    <version>4.0.3.201509231615-r</version>
   </parent>
 
   <artifactId>org.eclipse.egit.gitflow</artifactId>
