--- a/org.eclipse.egit.ui/plugin.xml
+++ b/org.eclipse.egit.ui/plugin.xml
@@ -434,6 +434,17 @@
 		  id="org.eclipse.egit.ui.keyword.git">
 	    </keywordReference>
       </page>
+      <page name="%GitPreferences_DateFormatPreferencePage_name"
+	    category="org.eclipse.egit.ui.GitPreferences"
+            class="org.eclipse.egit.ui.internal.preferences.DateFormatPreferencePage"
+	    id="org.eclipse.egit.ui.internal.preferences.DateFormatPreferencePage" >
+	    <keywordReference
+		  id="org.eclipse.egit.ui.keyword.git">
+	    </keywordReference>
+	    <keywordReference
+		  id="org.eclipse.egit.ui.keyword.date">
+	    </keywordReference>
+      </page>
 	  <page name="%GitPreferences_DecoratorPreferencePage_name"
 	    category="org.eclipse.egit.ui.GitPreferences"
             class="org.eclipse.egit.ui.internal.preferences.GitDecoratorPreferencePage"
@@ -534,6 +545,10 @@
 	  <keyword
 			id="org.eclipse.egit.ui.keyword.refresh"
 			label="%GitKeyword_Refresh_label">
+	  </keyword>
+	  <keyword
+			id="org.eclipse.egit.ui.keyword.date"
+			label="%GitKeyword_Date_label">
 	  </keyword>
    </extension>
 
