--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1037,6 +1037,33 @@ CommittingPreferencePage_WarnBlock_WarningsAndErrors=Warnings and errors
 CommittingPreferencePage_BlockCommit=Block commit button
 CommittingPreferencePage_BlockCommitCombo=Block if there are:
 
+DateFormatPreferencePage_title=Date Format
+DateFormatPreferencePage_formatChooser_label=Format
+DateFormatPreferencePage_formatInput_label=Date format
+DateFormatPreferencePage_invalidDateFormat_message=Not a valid date format
+DateFormatPreferencePage_datePreview_label=Date preview
+DateFormatPreferencePage_choiceGitDefault_label=Git default format
+DateFormatPreferencePage_choiceGitLocal_label=Git local format
+DateFormatPreferencePage_choiceGitRelative_label=Git relative date format
+DateFormatPreferencePage_choiceGitIso_label=Git ISO 8601 format
+DateFormatPreferencePage_choiceGitRfc_label=Git RFC 2822 format
+DateFormatPreferencePage_choiceGitShort_label=Git short date format
+DateFormatPreferencePage_choiceGitLocale_label=System locale date format with time zone
+DateFormatPreferencePage_choiceGitLocaleLocal_label=System locale date format
+DateFormatPreferencePage_choiceCustom_label=User-defined format
+DateFormatPreferencePage_gitRelative_format_text=relative date
+DateFormatPreferencePage_gitLocale_format_text=system format with time zone
+DateFormatPreferencePage_gitLocaleLocal_format_text=system format
+DateFormatPreferencePage_helpGitDefault_label=Time of the commit in the committer's time zone, with time zone; with US day and month names.
+DateFormatPreferencePage_helpGitLocal_label=Time of the commit converted to your local time zone, without time zone; with US day and month names.
+DateFormatPreferencePage_helpGitRelative_label=Time of the commit relative to your local time.
+DateFormatPreferencePage_helpGitIso_label=Time of the commit in the committer's time zone in ISO 8601 format with time zone.
+DateFormatPreferencePage_helpGitRfc_label=Time of the commit in the committer's time zone in e-mail format RFC 2822 with time zone.
+DateFormatPreferencePage_helpGitShort_label=Date of the commit in the committer's time zone, without time; year-month-day.
+DateFormatPreferencePage_helpGitLocale_label=Time of the commit in the committer's time zone in your system format, with time zone.
+DateFormatPreferencePage_helpGitLocaleLocal_label=Time of the commit converted to your local time zone in your system format, without time zone.
+DateFormatPreferencePage_helpCustom_label=Time of the commit in the committer's time zone in the format specified.
+
 BasicConfigurationDialog_ConfigLocationInfo=These settings will be stored in the Git configuration file in your home directory.
 BasicConfigurationDialog_DialogMessage=When creating a commit, Git records name and e-mail of author and committer. Please fill in the information so that your commits are correctly attributed.
 BasicConfigurationDialog_DialogTitle=Please identify yourself
@@ -1169,9 +1196,6 @@ DecoratorPreferencesPage_iconsShowConflicts=Conflicting resources
 DecoratorPreferencesPage_iconsShowAssumeValid=Assumed unchanged resources
 DecoratorPreferencesPage_changeSetLabelFormat=Commits:
 DecoratorPreferencesPage_otherDecorations=Other
-DecoratorPreferencesPage_dateFormat=Date format:
-DecoratorPreferencesPage_dateFormatPreview=Date preview:
-DecoratorPreferencesPage_wrongDateFormat=#Incorrect date format#
 DecoratorPreferencesPage_bindingChangeSetAuthor=Commit author name;
 DecoratorPreferencesPage_bindingChangeSetCommitter=Commit committer name;
 DecoratorPreferencesPage_bindingChangeSetDate=Commit creation date (see date format setting);
