[historyView] Pre-select single local branch
The actions checkout, delete branch, rename branch and merge most often
are done on a local branch and not on a remote tracking branch. Hence if
the user selects a commit in the history view which has one local branch
only, pre-select this local branch.

Don't list the currently checked out branch for checkout, merge and
delete branch actions as checking out or merging the already checked out
branch has no effect and deleting the current branch isn't allowed.

Change-Id: If494ebfb793d359a5c54da99f7f4a1c900e98873
Signed-off-by: Matthias Sohn <matthias.sohn@sap.com>

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -25,6 +25,7 @@ AbortRebaseCommand_JobName=Aborting Rebase
 AbstractHistoryCommandHandler_ActionRequiresOneSelectedCommitMessage=Action requires one commit to be selected
 AbstractHistoryCommanndHandler_CouldNotGetRepositoryMessage=Could not get the repository from the history view
 AbstractHistoryCommanndHandler_NoInputMessage=Could not get the current input from the history view
+AbstractHistoryCommitHandler_cantGetBranches=Could not obtain branches
 AbstractRebaseCommand_DialogTitle=Action Canceled
 AbstractRebaseCommandHandler_cleanupDialog_text=You have uncommitted changes. Either commit the changes, stash the changes, or discard the changes by resetting the current branch.
 AbstractRebaseCommandHandler_cleanupDialog_title=Cannot Rebase Repository ''{0}''
