Ask user to open project, if tried to compare file from closed project
Bug: 457405
Change-Id: Iea963bd6845b1ab8b03662c7b35741739c6927c5
Signed-off-by: Pawel Nowak <siersciotluk@gmail.com>

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1830,6 +1830,9 @@ StagingView_AddJob=Adding files to index...
 StagingView_RemoveJob=Removing files from index...
 StagingView_ResetJob=Unstaging files...
 StagingView_MessageErrors=Fix warnings/errors before you commit changes or explicitly ignore them
+StagingView_openingProjectFailed=Opening project failed
+StagingView_ProjectIsClosed=Project is closed
+StagingView_OpenProject=Project {0} is closed. Would you like to open it?
 
 StagingViewContentProvider_SubmoduleError=Unhandled exception while analyzing submodules
 StagingView_IgnoreErrors=Ignore warnings and errors
